# 25_HC228

./: README.md
HOT/app/: build.gradle.kts
HOT/app/release/baselineProfiles/0/: app-release.dm
HOT/app/release/baselineProfiles/1/: app-release.dm
HOT/app/src/main/: AndroidManifest.xml
HOT/app/src/main/java/com/example/myapplication4/: JoystickView.java  MainActivity.kt
HOT/app/src/main/res/drawable/: bt1.xml  button2.xml  rectangle.xml
HOT/app/src/main/res/layout/: activity_main.xml
HOT/app/src/main/res/values/: attrs.xml  strings.xml
HOT/app/src/main/res/xml/: network_security_config.xml
HOT/gradle/wrapper/: gradle-wrapper.properties
SERVO_ANKLE/: .cproject  .mxproject  .project  SERVO_ANKLE Debug.launch  SERVO_ANKLE.ioc
SERVO_ANKLE/Core/Inc/: Horizontal_Servo.h  dma_transport.h  dxl_2_0.h  main.h  stm32f4xx_it.h
SERVO_ANKLE/Core/Src/: Horizontal_Servo.c  dxl_2_0.c  freertos.c  gpio.c  main.c  stm32f4xx_it.c  tim.c  usart.c
SERVO_ANKLE/Debug/: makefile  objects.list
SERVO_ANKLE/Debug/Core/: main10.2.cyclo  main10.2.d  main10.2.su  subdir.mk
SERVO_ANKLE/Debug/Core/Src/: subdir.mk
SERVO_ANKLE/Debug/Drivers/STM32F4xx_HAL_Driver/Src/: subdir.mk
ros2/hot/: CMakeLists.txt  setup.py
ros2/hot/hot/: avoid.py  server.py
ros2/hot/hot/step_detection/: step.py
